# QABuddy

./: .gitignore  CHANGELOG.md  README.md  electron.vite.config.ts  install.ps1  package-lock.json  package.json  scratch-test.js  tsconfig.json  vite.config.mts  vitest.config.ts
.github/workflows/: build-release.yml
design-system/qa-buddy/: MASTER.md
example-program/: .env.example  README.md  confluence-client.ts  index.ts  jira-client.ts  package.json
hooks/: ponytail-config.js  ponytail-instructions.js
requirement/document/: Functional_Requirement_Design_QA_Buddy_Desktop.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.qa-buddy-rag/: snap.000000001DD7FB6F  snap.0000000021AC47B6
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  runtime_smoke.rs
src-tauri/src/commands/: bootstrap.rs  brd.rs  cancel.rs  config.rs  confluence.rs  dashboard.rs  defect.rs  files.rs  jira.rs  logs.rs  mod.rs  ocr.rs  rag.rs  updates.rs
src-tauri/src/config/: store.rs
src-tauri/src/models/: app_config.rs  brd.rs  chat.rs  connection.rs  defect.rs  jira.rs  misc.rs  mod.rs  rag.rs  test_case.rs  uqa.rs
src-tauri/src/services/: brd_service.rs  defect_repository.rs  error.rs  http.rs  intent_router.rs  logs.rs  mod.rs  ocr.rs  ollama.rs  prompts.rs  qa.rs  rag.rs  text_utils.rs  update.rs
src-tauri/src/services/confluence/: client.rs  mod.rs  service.rs
src-tauri/src/services/jira/: client.rs  mod.rs  service.rs
src/main/: config-store.ts  index.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: types.ts
(+77 files in other folders)
