[package]
name = "qa-buddy"
version = "0.7.0"
description = "Desktop Jira and Confluence assistant for QA teams with local Ollama integration."
authors = ["QA Buddy Team"]
license = "MIT"
repository = "https://github.com/ridhanshr/QABuddy"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qa_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
url = "2"
regex = "1"
keyring = "3"
sled = "0.34"
pulldown-cmark = "0.13"
calamine = "0.26"
rust_xlsxwriter = "0.80"
